--- a/swagger/ApplicationProfile.json
+++ b/swagger/ApplicationProfile.json
@@ -1297,28 +1297,42 @@
                     "format": "int32"
                 },
                 "mime_types_black_group_refs": {
-                    "description": "Blacklist string group of non-cacheable mime types. It is a reference to an object of type StringGroup.",
+                    "description": "Blacklist string group of non-cacheable mime types. It is a reference to an object of type StringGroup. Field deprecated in 20.1.3.",
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
                 "mime_types_black_list": {
-                    "description": "Blacklist of non-cacheable mime types.",
+                    "description": "Blacklist of non-cacheable mime types. Field deprecated in 20.1.3.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "mime_types_block_group_refs": {
+                    "description": "Blocklist string group of non-cacheable mime types. It is a reference to an object of type StringGroup. Field introduced in 20.1.3.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "mime_types_block_lists": {
+                    "description": "Blocklist of non-cacheable mime types. Field introduced in 20.1.3.",
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
                 "mime_types_group_refs": {
-                    "description": "Whitelist string group of cacheable mime types. If both Cacheable Mime Types string list and string group are empty, this defaults to */*. It is a reference to an object of type StringGroup.",
+                    "description": "Allowlist string group of cacheable mime types. If both Cacheable Mime Types string list and string group are empty, this defaults to */*. It is a reference to an object of type StringGroup.",
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
                 "mime_types_list": {
-                    "description": "Whitelist of cacheable mime types. If both Cacheable Mime Types string list and string group are empty, this defaults to */*.",
+                    "description": "Allowlist of cacheable mime types. If both Cacheable Mime Types string list and string group are empty, this defaults to */*.",
                     "type": "array",
                     "items": {
                         "type": "string"
