--- a/swagger/DebugVirtualService.yaml
+++ b/swagger/DebugVirtualService.yaml
@@ -511,6 +511,9 @@ definitions:
             name:
                 description: "Name of the object."
                 type: string
+            objsync:
+                description: "Object sync debug options. Field introduced in 20.1.3."
+                $ref: '#/definitions/DebugVirtualServiceObjSync'
             resync_flows:
                 description: "This option re-synchronizes flows between Active-Standby service engines for all the virtual services placed on them. It should be used with caution because as it can cause a flood between Active-Standby. Field introduced in 18.1.3,18.2.1."
                 type: boolean
@@ -573,6 +576,12 @@ definitions:
                 type: integer
                 default: 128
                 format: int32
+    DebugVirtualServiceObjSync:
+        type: object
+        properties:
+            trigger_initial_sync:
+                description: "Triggers Initial Sync on all the SEs of this VS. Field introduced in 20.1.3."
+                type: boolean
     DebugVirtualServiceSeParams:
         type: object
         properties:
