--- a/swagger/IpamDnsProviderProfile.yaml
+++ b/swagger/IpamDnsProviderProfile.yaml
@@ -665,7 +665,7 @@ definitions:
                 items:
                     type: string
             usable_networks:
-                description: "Usable networks for Virtual IP. If VirtualService does not specify a network and auto_allocate_ip is set, then the first available network from this list will be chosen for IP allocation. Field introduced in 20.1.3."
+                description: "Usable networks for Virtual IP. If VirtualService does not specify a network and auto_allocate_ip is set, then the first available network from this list will be chosen for IP allocation. Field introduced in 20.1.3. Allowed in Basic edition, Essentials edition, Enterprise edition."
                 type: array
                 items:
                     $ref: '#/definitions/IpamUsableNetwork'
