--- a/swagger/JobEntry.yaml
+++ b/swagger/JobEntry.yaml
@@ -405,7 +405,7 @@ definitions:
             metadata:
                 description: " Field introduced in 18.1.1."
                 type: string
-            num_tries:
+            num_retries:
                 description: "Number of times the sub job got scheduled. Field introduced in 20.1.1."
                 type: integer
                 format: int32
