--- a/swagger/NetworkSecurityPolicy.yaml
+++ b/swagger/NetworkSecurityPolicy.yaml
@@ -595,7 +595,7 @@ definitions:
                 description: "Criterion to use for src/dest port in a TCP/UDP packet. Enum options - IS_IN, IS_NOT_IN. Field introduced in 20.1.3."
                 type: string
             ports:
-                description: "Listening TCP port(s). Allowed values are 1-65535."
+                description: "Listening TCP port(s). Allowed values are 1-65535. Field introduced in 20.1.3."
                 type: array
                 items:
                     type: integer
