--- a/swagger/ServerAutoScalePolicy.yaml
+++ b/swagger/ServerAutoScalePolicy.yaml
@@ -364,6 +364,10 @@ definitions:
                 description: "UNIX time since epoch in microseconds. Units(MICROSECONDS)."
                 readOnly: True
                 type: string
+            delay_for_server_garbage_collection:
+                description: "Delay in minutes after which a down server will be removed from Pool. Value 0 disables this functionality. Field introduced in 20.1.3."
+                type: integer
+                format: int32
             description:
                 description: "User defined description for the object."
                 type: string
