--- a/swagger/SystemConfiguration.yaml
+++ b/swagger/SystemConfiguration.yaml
@@ -691,7 +691,7 @@ definitions:
                 description: "Placeholder for description of property email_configuration of obj type SystemConfiguration field type str  type object"
                 $ref: '#/definitions/EmailConfiguration'
             enable_cors:
-                description: "Enable CORS Header. Field introduced in 20.1.3."
+                description: "Enable CORS Header. Field introduced in 20.1.3. Allowed in Basic edition, Essentials edition, Enterprise edition."
                 type: boolean
             fips_mode:
                 description: "Enable FIPS mode. Field introduced in 20.1.1."
