--- a/swagger/VirtualService.yaml
+++ b/swagger/VirtualService.yaml
@@ -2643,6 +2643,47 @@ paths:
                         type: string
                 401:
                     description: log in failed
+    /virtualservice/{uuid}/outofbandstats/:
+        get:
+            consumes:
+                -   application/json
+            produces:
+                -   application/json
+            parameters:
+                -   in: header
+                    name: X-Avi-Tenant
+                    type: string
+                    required: false
+                    description: Avi Tenant Header
+                -   name: X-Avi-Tenant-UUID
+                    in: header
+                    type: string
+                    required: false
+                    description: Avi Tenant Header UUID
+                -   name: X-CSRFToken
+                    in: header
+                    type: string
+                    required: false
+                    description: Avi Controller may send back CSRF token in the response cookies. The caller should update the request headers with this token else controller will reject requests.
+                -   name: X-Avi-Version
+                    in: header
+                    type: string
+                    required: true
+                    description: The caller is required to set Avi Version Header to the expected version of configuration. The response from the controller will provide and accept data according to the specified version. The controller will reject POST and PUT requests where the data is not compatible with the specified version.
+                -   in: path
+                    name: uuid
+                    description: UUID of the object to fetch
+                    required: true
+                    type: string
+            security:
+                - basicAuth: []
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        type: string
+                401:
+                    description: log in failed
 definitions:
     AnalyticsPolicy:
         type: object
@@ -2958,12 +2999,12 @@ definitions:
         type: object
         properties:
             req_match_replace_pair:
-                description: "Strings to be matched and replaced with on the request body."
+                description: "Strings to be matched and replaced with on the request body. This should be configured when request_rewrite_enabled is set to true. This is currently not supported."
                 type: array
                 items:
                     $ref: '#/definitions/MatchReplacePair'
             request_rewrite_enabled:
-                description: "Enable rewrite on request body."
+                description: "Enable rewrite on request body. This is not currently supported."
                 type: boolean
             response_rewrite_enabled:
                 description: "Enable rewrite on response body."
@@ -2972,7 +3013,7 @@ definitions:
                 description: "Rewrite only content types listed in this string group. Content types not present in this list are not rewritten. It is a reference to an object of type StringGroup."
                 type: string
             rsp_match_replace_pair:
-                description: "Strings to be matched and replaced with on the response body."
+                description: "Strings to be matched and replaced with on the response body. This should be configured when response_rewrite_enabled is set to true."
                 type: array
                 items:
                     $ref: '#/definitions/MatchReplacePair'
@@ -4059,7 +4100,7 @@ definitions:
                 description: " It is a reference to an object of type Cloud."
                 type: string
             cloud_type:
-                description: " Enum options - CLOUD_NONE, CLOUD_VCENTER, CLOUD_OPENSTACK, CLOUD_AWS, CLOUD_VCA, CLOUD_APIC, CLOUD_MESOS, CLOUD_LINUXSERVER, CLOUD_DOCKER_UCP, CLOUD_RANCHER, CLOUD_OSHIFT_K8S, CLOUD_AZURE, CLOUD_GCP, CLOUD_NSXT. Allowed in Basic(Allowed values- CLOUD_NONE,COUD_NSXT) edition, Essentials(Allowed values- CLOUD_NONE,CLOUD_VCENTER) edition, Enterprise edition."
+                description: " Enum options - CLOUD_NONE, CLOUD_VCENTER, CLOUD_OPENSTACK, CLOUD_AWS, CLOUD_VCA, CLOUD_APIC, CLOUD_MESOS, CLOUD_LINUXSERVER, CLOUD_DOCKER_UCP, CLOUD_RANCHER, CLOUD_OSHIFT_K8S, CLOUD_AZURE, CLOUD_GCP, CLOUD_NSXT. Allowed in Basic(Allowed values- CLOUD_NONE,CLOUD_NSXT) edition, Essentials(Allowed values- CLOUD_NONE,CLOUD_VCENTER) edition, Enterprise edition."
                 type: string
                 default: "CLOUD_NONE"
             connections_rate_limit:
@@ -4319,7 +4360,7 @@ definitions:
                 type: boolean
                 default: True
             type:
-                description: "Specify if this is a normal Virtual Service, or if it is the parent or child of an SNI-enabled virtual hosted Virtual Service. Enum options - VS_TYPE_NORMAL, VS_TYPE_VH_PARENT, VS_TYPE_VH_CHILD. Allowed in Basic(Allowed values- VS_TYPE_NORMAL) edition, Essentials(Allowed values- VS_TYPE_NORMAL) edition, Enterprise edition."
+                description: "Specify if this is a normal Virtual Service, or if it is the parent or child of an SNI-enabled virtual hosted Virtual Service. Enum options - VS_TYPE_NORMAL, VS_TYPE_VH_PARENT, VS_TYPE_VH_CHILD. Allowed in Basic(Allowed values- VS_TYPE_NORMAL,VS_TYPE_VH_PARENT) edition, Essentials(Allowed values- VS_TYPE_NORMAL) edition, Enterprise edition."
                 type: string
                 default: "VS_TYPE_NORMAL"
             url:
@@ -4349,7 +4390,7 @@ definitions:
                 description: "Specifies the Virtual Service acting as Virtual Hosting (SNI) parent."
                 type: string
             vh_type:
-                description: "Specify if the Virtual Hosting VS is of type SNI or Enhanced. Enum options - VS_TYPE_VH_SNI, VS_TYPE_VH_ENHANCED. Field introduced in 20.1.3."
+                description: "Specify if the Virtual Hosting VS is of type SNI or Enhanced. Enum options - VS_TYPE_VH_SNI, VS_TYPE_VH_ENHANCED. Field introduced in 20.1.3. Allowed in Basic(Allowed values- VS_TYPE_VH_ENHANCED) edition, Enterprise edition. Special default for Basic edition is VS_TYPE_VH_ENHANCED, Enterprise is VS_TYPE_VH_SNI."
                 type: string
                 default: "VS_TYPE_VH_SNI"
             vip:
