--- a/python/avi/migrationtools/f5_converter/test/patch.yaml
+++ b/python/avi/migrationtools/f5_converter/test/patch.yaml
@@ -1,22 +1,25 @@
+# Version 2
+
+VirtualService: #Object to match
+  - match_name: ".*" #Wildcard to match all names
+    patch:
+      enabled: True #Enable Virtual Service
+      traffic_enabled: True #Enable Traffic
+      analytics_policy:
+        all_headers: true #Enable log all headers
+        full_client_logs:
+          enabled: true #Enable non-significant logs
+
+ApplicationProfile: #Object to match
+  - match_name_in_list: #Application profiles to match
+    - http 
+    - http-cmd
+    patch:
+      http_profile:
+        xff_enabled: true #Enable X-Forwarded-For header insertion 
+
 Pool:
-  - match_name: p1
+  - match_name_regex: ".*10"
     patch:
-      name: coolpool
-      cloud_ref: /api/cloud/?name=AWS
-
-  - match_name_regex: ".*cicd.*"
-    patch:
-      enabled: False
-      tenant_ref: /api/tenant/?name=awesome
-
-NetworkProfile:
-  - match_name_in_list:
-    - tcp
-    - tcp-legacy
-    - tcp-lan-optimized-300
-    - test-tcp
-    - tcp-lan-optimized
-    delete_old: true
-    patch:
-      name: foo-standard-tcp
-      tenant_ref: /api/tenant/?name=admin
+      lb_algorithm: LB_ALGORITHM_CONSISTENT_HASH 
+      lb_algorithm_hash: LB_ALGORITHM_CONSISTENT_HASH_SOURCE_IP_ADDRESS_AND_PORT 
