--- a/swagger/avi_global_spec.yaml
+++ b/swagger/avi_global_spec.yaml
@@ -54690,6 +54690,12 @@ definitions:
             https_monitor:
                 description: "Placeholder for description of property https_monitor of obj type HealthMonitor field type str  type object"
                 $ref: '#/definitions/HealthMonitorHttp'
+            imap_monitor:
+                description: "Health monitor for IMAP. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorImap'
+            imaps_monitor:
+                description: "Health monitor for IMAPS. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorImap'
             is_federated:
                 description: "This field describes the object's replication scope. If the field is set to false, then the object is visible within the controller-cluster and its associated service-engines.  If the field is set to true, then the object is replicated across the federation.  . Field introduced in 17.1.3. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
                 type: boolean
@@ -54700,6 +54706,12 @@ definitions:
             name:
                 description: "A user friendly name for this health monitor."
                 type: string
+            pop3_monitor:
+                description: "Health monitor for POP3. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorPop3'
+            pop3s_monitor:
+                description: "Health monitor for POP3S. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorPop3'
             radius_monitor:
                 description: "Health monitor for Radius. Field introduced in 18.2.3. Allowed in Basic edition, Essentials edition, Enterprise edition."
                 $ref: '#/definitions/HealthMonitorRadius'
@@ -54716,6 +54728,12 @@ definitions:
             sip_monitor:
                 description: "Health monitor for SIP. Field introduced in 17.2.8, 18.1.3, 18.2.1. Allowed in Basic edition, Essentials edition, Enterprise edition."
                 $ref: '#/definitions/HealthMonitorSIP'
+            smtp_monitor:
+                description: "Health monitor for SMTP. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorSmtp'
+            smtps_monitor:
+                description: "Health monitor for SMTPS. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorSmtp'
             successful_checks:
                 description: "Number of continuous successful health checks before server is marked up. Allowed values are 1-50."
                 type: integer
@@ -54728,7 +54746,7 @@ definitions:
                 description: " It is a reference to an object of type Tenant."
                 type: string
             type:
-                description: "Type of the health monitor. Enum options - HEALTH_MONITOR_PING, HEALTH_MONITOR_TCP, HEALTH_MONITOR_HTTP, HEALTH_MONITOR_HTTPS, HEALTH_MONITOR_EXTERNAL, HEALTH_MONITOR_UDP, HEALTH_MONITOR_DNS, HEALTH_MONITOR_GSLB, HEALTH_MONITOR_SIP, HEALTH_MONITOR_RADIUS. Allowed in Basic(Allowed values- HEALTH_MONITOR_PING,HEALTH_MONITOR_TCP,HEALTH_MONITOR_UDP,HEALTH_MONITOR_HTTP,HEALTH_MONITOR_HTTPS) edition, Essentials(Allowed values- HEALTH_MONITOR_PING,HEALTH_MONITOR_TCP,HEALTH_MONITOR_UDP) edition, Enterprise edition."
+                description: "Type of the health monitor. Enum options - HEALTH_MONITOR_PING, HEALTH_MONITOR_TCP, HEALTH_MONITOR_HTTP, HEALTH_MONITOR_HTTPS, HEALTH_MONITOR_EXTERNAL, HEALTH_MONITOR_UDP, HEALTH_MONITOR_DNS, HEALTH_MONITOR_GSLB, HEALTH_MONITOR_SIP, HEALTH_MONITOR_RADIUS, HEALTH_MONITOR_SMTP, HEALTH_MONITOR_SMTPS, HEALTH_MONITOR_POP3, HEALTH_MONITOR_POP3S, HEALTH_MONITOR_IMAP, HEALTH_MONITOR_IMAPS. Allowed in Basic(Allowed values- HEALTH_MONITOR_PING,HEALTH_MONITOR_TCP,HEALTH_MONITOR_UDP,HEALTH_MONITOR_HTTP,HEALTH_MONITOR_HTTPS) edition, Essentials(Allowed values- HEALTH_MONITOR_PING,HEALTH_MONITOR_TCP,HEALTH_MONITOR_UDP) edition, Enterprise edition."
                 type: string
             udp_monitor:
                 description: "Placeholder for description of property udp_monitor of obj type HealthMonitor field type str  type object"
@@ -54847,6 +54865,21 @@ definitions:
             ssl_attributes:
                 description: "SSL attributes for HTTPS health monitor. Field introduced in 17.1.1."
                 $ref: '#/definitions/HealthMonitorSSLAttributes'
+    HealthMonitorImap:
+        type: object
+        properties:
+            folder:
+                description: "Folder to access. Field introduced in 21.1.1."
+                type: string
+            ssl_attributes:
+                description: "SSL attributes for IMAPS monitor. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorSSLAttributes'
+    HealthMonitorPop3:
+        type: object
+        properties:
+            ssl_attributes:
+                description: "SSL attributes for POP3S monitor. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorSSLAttributes'
     HealthMonitorRadius:
         type: object
         required:
@@ -54878,6 +54911,26 @@ definitions:
                 description: "Match for a keyword in the first 2KB of the server header and body response. By default, it matches for SIP/2.0. Field introduced in 17.2.8, 18.1.3, 18.2.1."
                 type: string
                 default: "SIP/2.0"
+    HealthMonitorSmtp:
+        type: object
+        properties:
+            domainname:
+                description: "Sender domain name. Field introduced in 21.1.1."
+                type: string
+            mail_data:
+                description: "Mail data. Field introduced in 21.1.1."
+                type: string
+            recipients_ids:
+                description: "Mail recipients. Field introduced in 21.1.1."
+                type: array
+                items:
+                    type: string
+            sender_id:
+                description: "Mail sender. Field introduced in 21.1.1."
+                type: string
+            ssl_attributes:
+                description: "SSL attributes for SMTPS monitor. Field introduced in 21.1.1."
+                $ref: '#/definitions/HealthMonitorSSLAttributes'
     HealthMonitorSSLAttributes:
         type: object
         required:
