--- a/swagger/Image.yaml
+++ b/swagger/Image.yaml
@@ -418,7 +418,7 @@ definitions:
                 description: "Tenant that this object belongs to. It is a reference to an object of type Tenant. Field introduced in 18.2.6."
                 type: string
             type:
-                description: "Type of the image patch/system. Enum options - IMAGE_TYPE_PATCH, IMAGE_TYPE_SYSTEM. Field introduced in 18.2.6."
+                description: "Type of the image patch/system. Enum options - IMAGE_TYPE_PATCH, IMAGE_TYPE_SYSTEM, IMAGE_TYPE_MUST_CHECK. Field introduced in 18.2.6."
                 type: string
             uber_bundle:
                 description: "Status to check if the image is an uber bundle. Field introduced in 18.2.8, 20.1.1."
