--- a/swagger/WafPolicy.yaml
+++ b/swagger/WafPolicy.yaml
@@ -399,6 +399,30 @@ definitions:
                 type: integer
                 default: 30
                 format: int32
+    BotClassification:
+        type: object
+        required:
+            -   type
+        properties:
+            type:
+                description: "One of the system-defined Bot classification types. Enum options - HUMAN, GOOD_BOT, BAD_BOT, DANGEROUS_BOT, USER_DEFINED_BOT, UNKNOWN_CLIENT. Field introduced in 21.1.1."
+                type: string
+            user_defined_type:
+                description: "If 'type' has BotClassificationTypes value 'USER_DEFINED', this is the user-defined value. Field introduced in 21.1.1."
+                type: string
+    BotDetectionMatch:
+        type: object
+        required:
+            -   match_operation
+        properties:
+            classifications:
+                description: "Bot classification types. Field introduced in 21.1.1."
+                type: array
+                items:
+                    $ref: '#/definitions/BotClassification'
+            match_operation:
+                description: "Match criteria. Enum options - IS_IN, IS_NOT_IN. Field introduced in 21.1.1."
+                type: string
     CookieMatch:
         type: object
         required:
@@ -579,6 +603,9 @@ definitions:
     MatchTarget:
         type: object
         properties:
+            bot_detection_result:
+                description: "Configure the bot classification result. Field introduced in 21.1.1."
+                $ref: '#/definitions/BotDetectionMatch'
             client_ip:
                 description: "Configure client ip addresses."
                 $ref: '#/definitions/IpAddrMatch'
