--- a/swagger/ALBServicesConfig.json
+++ b/swagger/ALBServicesConfig.json
@@ -561,7 +561,7 @@
                     "type": "string"
                 },
                 "app_signature_config": {
-                    "description": "Default values to be used for Application Signature sync. Field introduced in 20.1.4.",
+                    "description": "Default values to be used for Application Signature sync. Field introduced in 20.1.4. Allowed in Basic edition, Essentials edition, Enterprise edition.",
                     "$ref": "#/definitions/AppSignatureConfig"
                 },
                 "asset_contact": {
@@ -680,9 +680,9 @@
             "type": "object",
             "properties": {
                 "app_signature_sync_interval": {
-                    "description": "Application Signature db sync interval in minutes. Allowed values are 2-1440. Field introduced in 20.1.4. Unit is MIN. Allowed in Basic(Allowed values- 60) edition, Essentials(Allowed values- 60) edition, Enterprise edition.",
+                    "description": "Application Signature db sync interval in minutes. Allowed values are 60-10080. Field introduced in 20.1.4. Unit is MIN. Allowed in Basic(Allowed values- 60) edition, Essentials(Allowed values- 60) edition, Enterprise edition. Special default for Basic edition is 60, Essentials edition is 60, Enterprise is 1440.",
                     "type": "integer",
-                    "default": 60,
+                    "default": 1440,
                     "format": "int32"
                 }
             }
@@ -728,7 +728,7 @@
                     "type": "boolean"
                 },
                 "enable_waf_signatures_notifications": {
-                    "description": "Enable event notifications when new CRS versions are available. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition.",
+                    "description": "Enable event notifications when new CRS versions are available. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True.",
                     "type": "boolean",
                     "default": true
                 }
@@ -742,7 +742,7 @@
                     "type": "boolean"
                 },
                 "attach_tech_support": {
-                    "description": "Opt-in to attach tech support with support case. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition.",
+                    "description": "Opt-in to attach tech support with support case. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True.",
                     "type": "boolean",
                     "default": true
                 },
