--- a/swagger/VirtualService.yaml
+++ b/swagger/VirtualService.yaml
@@ -3323,6 +3323,9 @@ definitions:
         required:
             -   protocol
         properties:
+            add_string:
+                description: "Add a query string to the redirect URI. If keep_query is set, concatenates the add_string to the query of the incoming request. Field introduced in 21.1.1."
+                type: string
             host:
                 description: "Host config."
                 $ref: '#/definitions/URIParam'
@@ -4083,6 +4086,9 @@ definitions:
             azure_availability_set:
                 description: "(internal-use)Applicable for Azure only. Azure Availability set to which this VS is associated. Internally set by the cloud connector. Field introduced in 17.2.12, 18.1.2."
                 readOnly: True
+                type: string
+            bot_policy_ref:
+                description: "Bot detection policy for the Virtual Service. It is a reference to an object of type BotDetectionPolicy. Field introduced in 21.1.1."
                 type: string
             bulk_sync_kvcache:
                 description: "(This is a beta feature). Sync Key-Value cache to the new SEs when VS is scaled out. For ex  SSL sessions are stored using VS's Key-Value cache. When the VS is scaled out, the SSL session information is synced to the new SE, allowing existing SSL sessions to be reused on the new SE. . Field introduced in 17.2.7, 18.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
